Add more maintainers.
Signed-off-by: Xuesong Luo <lxuesong@amazon.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,3 @@
 # This should match the owning team set up in https://github.com/orgs/opensearch-project/teams
 *   @tianleh @kavilla @ohltyler @CCongWang @mpabba3003 @ashwin-pc @peterzhuamazon
+*   @xluo-aws @Hailong-am @SuZhou-Joe @ruanyl @wanglam @raintygao
